[tool.poetry]
name = "email2phonenumber"
version = "0.1.0"
description = "Getting phonenumbers from email"
authors = ["Eric Bode <eric.bode@globalorange.nl>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.10.0"
requests = "^2.26.0"
urllib3 = "^1.26.7"
colorama = "^0.4.4"
certifi = "^2021.10.8"
idna = "^3.3"
chardet = "^4.0.0"
soupsieve = "^2.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
